# MessedUpSite

./: .gitignore  .python-version  Dockerfile  Makefile  MessedUpSite.code-workspace  README.md  docker-compose.yml  manage.py  pyproject.toml
MessedUpSite/: asgi.py  settings.py  urls.py  wsgi.py
MessedUpSite/apps/accounts/: admin.py  apps.py  models.py  urls.py  views.py
MessedUpSite/apps/accounts/migrations/: 0001_initial.py
MessedUpSite/apps/activities/: apps.py  fields.py  models.py  urls.py  views.py
MessedUpSite/apps/activities/migrations/: 0002_activity_image_activity_type.py  0003_alter_activity_type.py  0004_alter_activity_image.py  0005_alter_activity_image.py  0006_alter_activity_id_alter_activity_organizer.py
MessedUpSite/apps/activityapi/: apps.py  models.py
MessedUpSite/apps/activityapi/migrations/: 0001_initial.py  0002_activity_image_activity_type.py  0003_alter_activity_type.py  0004_alter_activity_image.py
MessedUpSite/apps/documents/: apps.py  fields.py  models.py
MessedUpSite/apps/public/: apps.py  urls.py  views.py
MessedUpSite/apps/registrationlists/: admin.py  apps.py  fields.py  models.py
MessedUpSite/static/css/: activities.css  carousel.css  color.css  footer.css  login.css  members.css  navbar.css  styles.css
MessedUpSite/static/js/: activities-filter.js  carousel.js  color-modes.js
MessedUpSite/templates/: association.html  base.html  contact.html  floorball.html  footer.html  index.html  navbar.html
MessedUpSite/templates/accounts/: activities.html  login.html  members.html  profile.html
requirements/: dev.txt
(+9 files in other folders)
