[project]
name = "messedupsite"
version = "0.1.0"
description = "Messed Up Website - Django version"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.3",
    "psycopg2-binary==2.9.11",
    "djangorestframework==3.14.0",

]

[dependency-groups]
dev = [
    "black==26.3.1",
    "mypy==1.19.1",
]
